[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Crop.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/Seed.png" type="Texture" id=2]
[ext_resource path="res://resources/textures/Stage1.png" type="Texture" id=3]
[ext_resource path="res://resources/textures/Stage2.png" type="Texture" id=4]
[ext_resource path="res://resources/textures/Stage3.png" type="Texture" id=5]
[ext_resource path="res://resources/textures/StageHarvest.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/Potato.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "Grow",
"speed": 1.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 15.6121, 15.4949 )

[node name="Crop" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
growth_time = 1.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

z_index = 1
frames = SubResource( 1 )
animation = "Grow"
centered = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 15.794, 16.1179 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="GrowthTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="WiggleTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="WiggleTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="Highlight" type="Polygon2D" parent="." index="5"]

visible = false
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )
uv = PoolVector2Array(  )
color = Color( 0.14389, 0.800781, 0.215738, 0.480667 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0
_sections_unfolded = [ "Visibility" ]

[connection signal="area_entered" from="." to="." method="_on_Crop_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_Crop_area_exited"]

[connection signal="input_event" from="." to="." method="_on_Crop_input_event"]

[connection signal="mouse_exited" from="." to="." method="_on_Crop_mouse_exited"]

[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]

[connection signal="timeout" from="WiggleTimer" to="." method="_on_WiggleTimer_timeout"]


